--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,8 @@ img {
 .header {
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid #E7E9FC;
+    border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header__nav {
@@ -113,6 +114,28 @@ img {
 
     display: block;
     padding: 24px 0;
+
+    position: relative;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-list__link.active {
+    color: #404BBF;
+}
+
+.nav-list__link.active::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #404BBF;
+
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    right: 0;
 }
 
 .nav-list__link:hover,
@@ -136,6 +159,8 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-list__link:hover,
@@ -160,7 +185,7 @@ img {
 
 .intro__button {
     font-family: "Roboto", sans-serif;
-    background-color: #4D5AE5;
+    background-color: #4d5ae5;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -179,10 +204,9 @@ img {
 
 .intro__button:hover,
 .intro__button:focus {
-    background-color: #404BBF;
+    background-color: #404bbf;
     cursor: pointer;
 }
-
 
 .features {
     padding: 120px 0;
@@ -217,7 +241,7 @@ img {
 }
 
 .team {
-    background-color: #F4F4FD;
+    background-color: #f4f4fd;
     padding: 120px 0;
 }
 
@@ -292,7 +316,6 @@ img {
 
 .portfolio-item {
     flex-basis: calc((100% - 48px) / 3);
-
 }
 
 .portfolio-item__photo {}
