--- a/css/styles.css
+++ b/css/styles.css
@@ -170,7 +170,15 @@ img {
 
 .intro {
     background-color: #2e2f42;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/intro/bg.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
+    max-width: 1440px;
     padding: 188px 0;
+
+    margin: 0 auto;
 }
 
 .intro__title {
@@ -200,6 +208,8 @@ img {
     cursor: pointer;
 
     margin-top: 48px;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .intro__button:hover,
