--- a/css/styles.css
+++ b/css/styles.css
@@ -295,6 +295,7 @@ img {
     background-color: #ffffff;
     flex-basis: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-member__photo {}
@@ -320,6 +321,40 @@ img {
     color: #434455;
 
     text-align: center;
+}
+
+.social-networks-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    margin-top: 8px;
+}
+
+.social-networks-list__item {
+    width: 40px;
+    height: 40px;
+}
+
+.social-networks-list__link {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-networks-list__link:hover,
+.social-networks-list__link:focus {
+    background-color: #404bbf;
+}
+
+.social-networks-list__icon {
+    fill: #f4f4fd;
 }
 
 .portfolio {
